--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,8 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@media screen and (max-width: 800px) {
+    html {
+        overflow: hidden;
+    }
+}
